--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Industrial Corporate Industry & Factory - Industrio - Industrial Industry & Factory">
+    <meta name="description" content="MANTRATECH & SERVICES PVT. LTD.">
     <meta name="keywords" content="chemical, company, construction, engineering, factory, gas, industrial, industry, laboratory, manufacture, mechanical, mining, oil, pharmaceutical, refinery">
-    <meta name="author" content="Themexriver">
+    <meta name="author" content="MANTRATECH & SERVICES PVT. LTD.">
     <title>Industrio - Responsive HTML 5 template</title>
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
