--- a/coming-soon.html
+++ b/coming-soon.html
@@ -33,7 +33,7 @@
 <div class="preloader"><div class="spinner"></div></div> <!-- /.preloader -->
 
 <div class="coming-soon-block">
-    <a href="index.html" class="logo"><img src="img/logo1-1.png" alt="Awesome Image"/></a>
+    <a href="index.html" class="logo"><img src="img/logo1-1.png" alt="Mantratech"/></a>
     <div class="box">
         <div class="content">
             <h3>We are <span>coming soon!</span></h3>
